force-app/main/default/objects/Property_Manager__c/Property_Manager__c.object-meta.xml
<CustomObject>
    <description>Have multiple properties assigned to their management.</description>
    <label>Property Manager</label>
    <nameField>
        <label>Property Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>