force-app/main/default/objects/Property_Manager__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Property Managers</relationshipLabel>
    <relationshipName>Property_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>