force-app/main/default/objects/Property_Manager__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <description>Commission on management fee for each property assigned to this property manager.</description>
    <label>Commission</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>