force-app/main/default/objects/Property_Manager__c/listViews/North_Charlotte_Branch.listView-meta.xml
<ListView>
    <fullName>North_Charlotte_Branch</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>Charlotte - North</value>
    </filters>
    <label>North Charlotte Branch</label>
</ListView>